<resources>
    <string name="app_name">The Movies App</string>
    <string name="header_image">Header Image</string>
    <string name="poster_image">Poster Image</string>
    <string name="rating">Rating:</string>
    <string name="released_date">Released Date:</string>
    <string name="description">Description:</string>
    <string name="info_activity">The Movies App</string>
    <string name="sort_by">SORT BY</string>
    <string name="show">Short by:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reviews">Reviews ></string>
    <string name="written_by">Written by:</string>
    <string name="no_reviews_available">No reviews available!!!</string>
    <string name="trailers">Trailers ></string>
    <string name="no_trailers_available">No trailers available!!!</string>
    <string name="activity_reviews">Reviews</string>
    <string name="activity_trailers">Trailers</string>
    <string name="movie_info">Movie Info</string>
    <string name="chooser_title">Open with:</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="most_popular">Most Popular Movies</string>
    <string name="movie_image">movie_image</string>

    <string-array name="choices">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Upcoming</item>
    </string-array>
</resources>
